[tool.poetry]
name = "vyper-tree"
version = "0.1.0"
description = ""
authors = ["z80 <z80@ophy.xyz>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
vyper = {git = "https://github.com/vyperlang/vyper"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
