[tool.poetry]
name = "vyper-tree"
version = "0.1.12"
description = ""
authors = ["z80 <z80@ophy.xyz>"]
homepage = "https://github.com/z80dev/vyper-tree"
repository = "https://github.com/z80dev/vyper-tree"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
vyper = ">=0.3.4"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"vyper-tree" = "vyper_tree:main"
